<resources>
    <string name="app_name">desafio_firebase</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="desafio_firebase">Desafio Firebase</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="created_at">Created at</string>
    <string name="save_game">Save Game</string>
    <string name="image_game">Image game</string>
    <string name="description">Description</string>
    <string name="description_sample">Mortal Kombat é uma série de jogos criados pelo estúdio de Chicago da Midway Games. Em 2011, depois da falência da Midway, a produção de Mortal Kombat foi adquirida pela Warner Bros, tornando-se em seguida na Netherealm. A Warner detém atualmente os direitos da série. \n\n A produção do primeiro jogo foi baseada na ideia original que Ed Boon e John Tobias tinham em fazer um jogo em que participasse Jean-Claude Van Damme,[2] mas a ideia foi deixada de parte, e em vez disso foi criado Mortal Kombat, um jogo de luta com temas de fantasia e ciência, lançado em Outubro de 1992.[3] O jogo original, gerou muitas sequelas, vários jogos de acção-aventura, filmes (animados e live-action com a sua sequela) e séries de televisão (animadas e live-action). Outra média inclui banda desenhada, jogo de cartas e a Mortal Kombat: Live Tour, um teatro de artes marciais com personagens da série. \n\n A série é conhecida pelos altos níveis de violência sangrenta, incluindo mais notavelmente, as Fatalidades (movimentos finalizadores, que requerem uma sequência de botões e movimentos para serem executadas). As Fatalidades, em parte, levaram à criação da ESRB, o sistema norte-americano que classifica os videojogos. O próprio nome da série também é conhecido por usar a letra "K" em vez da letra "C", isto para o "C" ter um som mais forte, criando intencionalmente um erro de soletração para a palavra "combat", assim bem como para outras palavras com o som rígido C para os jogos posteriores da série além de colocar originalidade ao jogo. Os primeiros jogos são reconhecidos especialmente pelos seus sprites realisticamente digitalizados (os jogos contemporâneos usam sprites desenhados manualmente) e o uso extensivo de troca de palete para criar novos personagens.</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="mortal_kombat_11">Mortal Kombat 11</string>
    <string name="_2019">2019</string>
    <string name="repeate_password">Repeate password</string>
</resources>